[aliases]
test=pytest

[metadata]
name = responsum
description = A generic dispersion response library
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/responsum
author_email = jmichaelburgess@gmail.com
author = J. Michael Burgess
requires_python = >=2.7.0


project_urls =
    Bug Tracker = https://github.com/grburgess/responsum/issues
    Source Code = https://github.com/grburgess/responsum


[options]
packages = find:
install_requires =
    numpy		
    matplotlib
    astropy
    scipy
    h5py
tests_require =
    pytest
    pytest-codecov



[versioneer]
VCS=git
style=pep440
versionfile_source=responsum/_version.py
versionfile_build=responsum/_version.py
tag_prefix=v
parentdir_prefix=responsum-
